// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`reports:verify integration tests should update README and generate divergences.md in --update mode 1`] = `
"
#### Estrutura de Relatórios e Logs (Exemplo Real)

Ao executar \`npm run token-audit:dry-run\` ou \`npm run token-audit:report\`, a pasta \`./reports\` é populada com a seguinte estrutura:

\`\`\`text
reports/
└── token-audit-dry-run-2026-05-30T10-00-00.json    # [2026-05-30 10 00:00] Log histórico
\`\`\`
"
`;

exports[`reports:verify integration tests should update README and generate divergences.md in --update mode 2`] = `
"# Resumo de Atualização dos Relatórios

Data: [NORMALIZED]

## Mudanças na Árvore

### Anterior
\`\`\`text
reports/
├── compliance-history.json    # Histórico de progresso
└── token-audit.json           # Logs técnicos brutos (mais recente)
\`\`\`

### Novo
\`\`\`text
reports/
└── token-audit-dry-run-2026-05-30T10-00-00.json    # [2026-05-30 10 00:00] Log histórico
\`\`\`
"
`;
